--- a/LaTex/BachelorThesis/arbeit-vorlage-praeambel.tex
+++ b/LaTex/BachelorThesis/arbeit-vorlage-praeambel.tex
@@ -11,6 +11,7 @@
 \usepackage{mathpazo} % Palatino für Mathemodus
 %\usepackage{mathpazo,tgpagella} % auch sehr schöne Schriften
 \usepackage{setspace} % Zeilenabstand
+\usepackage{amssymb}
 % \onehalfspacing % 1,5 Zeilen
 % Schriften-Größen
 \setkomafont{chapter}{\huge\rmfamily} % Überschrift der Ebene
